🚀 Production deployment ready - AWS EC2 infrastructure and deployment automation
✅ Features completed:
- Fixed .gitignore to prevent .env.production from being committed
- Removed all unnecessary documentation files (kept only README.md)
- Created complete AWS EC2 infrastructure with Terraform
- Added automated deployment scripts for AWS and local environments
- Implemented production-optimized Docker Compose configuration
- Added Nginx reverse proxy with SSL support and security headers
- Created monitoring, backup, and health check scripts
- Added comprehensive deployment guide
- Implemented production readiness verification script

🏗️ Infrastructure:
- Terraform configuration for AWS VPC, EC2, Security Groups
- Automated EC2 instance provisioning with user data script
- Production-optimized Docker containers with resource limits
- Nginx reverse proxy with rate limiting and security headers
- SSL certificate automation with Let's Encrypt support

🔧 Deployment:
- One-command deployment script (./deploy.sh)
- AWS automated deployment (./scripts/deploy-aws.sh)
- Production environment auto-generation with secure passwords
- Health checks and monitoring setup
- Backup automation and cron job configuration

🔐 Security:
- Secure password generation
- JWT secret auto-generation
- SSL/TLS configuration
- Security headers implementation
- Rate limiting and CORS protection
- Firewall and network security

📦 Project is 100% ready for client delivery and production deployment!

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -165,7 +165,10 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      - nginx
+      backend:
+        condition: service_healthy
+      payment-service:
+        condition: service_healthy
     networks:
       - smartfinance-network
     deploy:
