--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,58 +1,134 @@
+# Nginx configuration optimized for t2.micro instance (1GB RAM)
+user nginx;
+worker_processes 1;  # Single process for low memory usage
+
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
 events {
-    worker_connections 1024;
+    worker_connections 512;  # Reduced for memory efficiency
+    use epoll;
+    multi_accept on;
 }
 
 http {
-    upstream backend {
-        server backend:5000;
-    }
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
+    # Logging format
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /var/log/nginx/access.log main;
+
+    # Performance optimizations
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 30;
+    types_hash_max_size 2048;
+    server_tokens off;
+
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/json
+        application/javascript
+        application/xml+rss
+        application/atom+xml
+        image/svg+xml;
+
+    # Rate limiting
+    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=login:10m rate=1r/s;
+
+    # Security headers
+    add_header X-Frame-Options DENY;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block";
+    add_header Referrer-Policy "strict-origin-when-cross-origin";
+
+    # Upstream servers
     upstream frontend {
-        server frontend:3000;
+        server frontend:3000 max_fails=3 fail_timeout=30s;
+        keepalive 2;
     }
 
-    upstream payment-service {
-        server payment-service:3001;
+    upstream backend {
+        server backend:5000 max_fails=3 fail_timeout=30s;
+        keepalive 2;
     }
 
+    upstream payment_service {
+        server payment-service:3001 max_fails=3 fail_timeout=30s;
+        keepalive 2;
+    }
+
+    # Main server configuration
     server {
         listen 80;
-        server_name localhost;
-
+        server_name _;
+        
+        # Security
+        client_max_body_size 10M;
+        client_body_timeout 30s;
+        client_header_timeout 30s;
+        
         # Health check endpoint
         location /health {
-            return 200 '{"status":"healthy","timestamp":"$time_iso8601"}';
-            add_header Content-Type application/json;
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
         }
 
-        # Frontend routes
-        location / {
-            proxy_pass http://frontend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Backend API routes
+        # API routes
         location /api/ {
+            limit_req zone=api burst=20 nodelay;
+            
             proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
         }
 
         # Payment service routes
         location /payment/ {
-            proxy_pass http://payment-service/;
+            limit_req zone=api burst=10 nodelay;
+            
+            proxy_pass http://payment_service/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
         }
 
-        # WebSocket support for SignalR
+        # SignalR Hub
         location /financehub {
             proxy_pass http://backend;
             proxy_http_version 1.1;
@@ -63,6 +139,76 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_cache_bypass $http_upgrade;
+            
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 300s;  # Longer timeout for WebSocket connections
+        }
+
+        # Static files and frontend
+        location / {
+            proxy_pass http://frontend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+            
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+            
+            # Cache static assets
+            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+                proxy_pass http://frontend;
+                expires 1y;
+                add_header Cache-Control "public, immutable";
+                access_log off;
+            }
+        }
+
+        # Monitoring endpoint (if enabled)
+        location /metrics {
+            allow 127.0.0.1;
+            allow 172.20.0.0/16;  # Docker network
+            deny all;
+            
+            proxy_pass http://prometheus:9090;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Deny access to sensitive files
+        location ~ /\. {
+            deny all;
+            access_log off;
+            log_not_found off;
+        }
+
+        location ~ \.(env|config|ini|log|bak)$ {
+            deny all;
+            access_log off;
+            log_not_found off;
         }
     }
+
+    # HTTPS server (optional - requires SSL certificates)
+    # server {
+    #     listen 443 ssl http2;
+    #     server_name _;
+    #     
+    #     ssl_certificate /etc/nginx/ssl/cert.pem;
+    #     ssl_certificate_key /etc/nginx/ssl/key.pem;
+    #     
+    #     ssl_protocols TLSv1.2 TLSv1.3;
+    #     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
+    #     ssl_prefer_server_ciphers off;
+    #     
+    #     # Include the same location blocks as HTTP server
+    # }
 }
